# internal/delivery/http/truck/handler.go
@@ -4,35 +4,37 @@ import (
 	"encoding/json"
 	"log"
 	"net/http"
+	"test-project/internal/domain/auth"
 	truckDomain "test-project/internal/domain/truck"
+	"test-project/internal/middleware"
 	"test-project/internal/usecase"
 	"test-project/internal/validator"
 	"test-project/utils"
 
 	"github.com/gorilla/mux"
-	"github.com/jackc/pgx/v5/pgxpool"
-	"go.uber.org/zap"
 )
 
 type Handler struct {
-	uc     usecase.TruckUsecase
-	logger *zap.Logger
+	uc   usecase.TruckUsecase
+	deps *auth.Deps
 }
 
-func NewHandler(uc usecase.TruckUsecase, logger *zap.Logger) *Handler {
-	return &Handler{uc: uc, logger: logger}
+func NewHandler(uc usecase.TruckUsecase, deps *auth.Deps) *Handler {
+	return &Handler{uc: uc, deps: deps}
 }
-func RegisterUserRoutes(r *mux.Router, db *pgxpool.Pool, logger *zap.Logger) {
+func RegisterUserRoutes(r *mux.Router, deps *auth.Deps) {
 	v, err := validator.New()
 	if err != nil {
 		log.Fatal("Ошибка инициализации валидатора:", err)
 	}
 
-	truckRepo := truckDomain.NewPostgresTruckRepo(db)
+	truckRepo := truckDomain.NewPostgresTruckRepo(deps.DB)
 	svc := usecase.NewTruckUsecase(truckRepo, v)
-	h := NewHandler(svc, logger)
+	h := NewHandler(svc, deps)
 
-	r.HandleFunc("/trucks", h.Create).Methods("POST")
+	r.Handle("/trucks", middleware.JwtMiddleware(deps, h.Create)).Methods(http.MethodPost)
+	r.Handle("/trucks", middleware.JwtMiddleware(deps, h.GET)).Methods(http.MethodGet)
+	r.Handle("/trucks/{id}", middleware.JwtMiddleware(deps, h.GETById)).Methods(http.MethodGet)
 }
 
 // Create handles the creation of a new truck
@@ -42,6 +44,7 @@ func RegisterUserRoutes(r *mux.Router, db *pgxpool.Pool, logger *zap.Logger) {
 // @Accept json
 // @Produce json
 // @Param truck body truck.Truck true "Truck object to be created"
+// @Security BearerAuth
 // @Success 201 {object} cargo.CreateResponse "Cargo successfully created"
 // @Failure 400 {object} cargo.ErrorResponse "Invalid JSON format"
 // @Failure 500 {object} cargo.ErrorResponse "Internal server error"
@@ -50,16 +53,65 @@ func (h *Handler) Create(w http.ResponseWriter, r *http.Request) {
 	var truck truckDomain.Truck
 
 	if err := json.NewDecoder(r.Body).Decode(&truck); err != nil {
-		utils.JSON(w, http.StatusBadRequest, "Невалидный формат JSON", nil, h.logger)
+		utils.JSON(w, http.StatusBadRequest, "Невалидный формат JSON", nil, h.deps.Logger)
 		return
 	}
 
 	truck, err := h.uc.CreateTruck(truck)
 
 	if err != nil {
-		utils.JSON(w, http.StatusInternalServerError, err.Error(), nil, h.logger)
+		utils.JSON(w, http.StatusInternalServerError, err.Error(), nil, h.deps.Logger)
 		return
 	}
 
-	utils.JSON(w, http.StatusCreated, "Машина успешно создана", truck, h.logger)
+	utils.JSON(w, http.StatusCreated, "Машина успешно создана", truck, h.deps.Logger)
+}
+
+// GET retrieves a list of all trucks
+// @Summary List all trucks
+// @Description Retrieves a list of all trucks in the system
+// @Tags trucks
+// @Accept json
+// @Produce json
+// @Security BearerAuth
+// @Success 201 {object} truck.ListResponse "List of trucks"
+// @Failure 404 {object} truck.ErrorResponse "Trucks not found"
+// @Router /trucks [get]
+func (h *Handler) GET(w http.ResponseWriter, r *http.Request) {
+	trucks, err := h.uc.ListTrucks()
+	if err != nil {
+		utils.JSON(w, http.StatusNotFound, err.Error(), nil, h.deps.Logger)
+		return
+	}
+
+	utils.JSON(w, http.StatusCreated, "Список машин", trucks, h.deps.Logger)
+}
+
+// GETById retrieves a truck by ID
+// @Summary Get a truck by ID
+// @Description Retrieves a truck by their ID
+// @Tags trucks
+// @Accept json
+// @Produce json
+// @Param id path int true "Truck ID"
+// @Security BearerAuth
+// @Success 201 {object} truck.GetResponse "Truck found"
+// @Failure 400 {object} truck.ErrorResponse "Invalid ID"
+// @Failure 404 {object} truck.ErrorResponse "Truck not found"
+// @Router /trucks/{id} [get]
+func (h *Handler) GETById(w http.ResponseWriter, r *http.Request) {
+	id, err := utils.ParseNumber(mux.Vars(r)["id"])
+	if err != nil {
+		utils.JSON(w, http.StatusBadRequest, "Некорректный id", nil, h.deps.Logger)
+		return
+	}
+
+	truck, err := h.uc.GetTruck(id)
+
+	if err != nil {
+		utils.JSON(w, http.StatusNotFound, err.Error(), nil, h.deps.Logger)
+		return
+	}
+
+	utils.JSON(w, http.StatusCreated, "Машина", truck, h.deps.Logger)
 }
